--- a/css/base.css
+++ b/css/base.css
@@ -18,16 +18,21 @@
 
 body {
   margin: 0;
-  color: var(--color-text);
-  background-color: var(--color-bg);
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
   overflow: hidden;
+  background: radial-gradient(circle, #000428, #004e92);
   height: 100vh;
-  background: url(../img/noise.png), radial-gradient(circle, var(--color-bg) 0%, var(--color-bg-alt) 100%);
-  background-size: 150px, 100% 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.star {
+  position: absolute;
+  width: 2px;
+  height: 2px;
+  background-color: white;
+  border-radius: 50%;
+  animation: twinkle 1.5s infinite ease-in-out;
 }
 
 /* Page Loader */
@@ -62,6 +67,15 @@ body {
   to {
     opacity: 1;
     transform: scale3d(0.5, 0.5, 1);
+  }
+}
+
+@keyframes twinkle {
+  0%, 100% {
+      opacity: 0.2;
+  }
+  50% {
+      opacity: 1;
   }
 }
 
