--- a/css/base.css
+++ b/css/base.css
@@ -194,3 +194,13 @@ h1, h3, h4 {
   text-align: center; /* Ensures text is centered inside */
   width: 100%; /* Ensures headers take full width */
 }
+
+audio {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 10px 15px;
+  border-radius: 10px;
+  width: 300px;
+  margin-left: auto;
+}
